crates/test-files/fixtures/compile_errors/call_to_mut_fn_without_self.fe
contract Foo {
    fn bar(self) {
        baz()
    }

    fn baz(self) {}
}
